--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libasound2-dev
+        sudo apt-get install libasound2-dev libreadline-dev
     - name: Build and Test
       env:
         CC: ${{ matrix.compiler }}
