--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libpulse-dev libasound2-dev
+        sudo apt-get install libpulse-dev libasound2-dev libreadline-dev
 
     - name: Build
       run: |
